fix:Alignment of insight text

--- a/src/app/insights/insights.component.less
+++ b/src/app/insights/insights.component.less
@@ -46,6 +46,14 @@
         }
     }
 
+    .insightInfo {
+        font-size: 12px;
+        text-align: left;
+        padding: 0 45px 0 15px;
+        display: block;
+        font-weight: 300;
+    }
+
     .card-pf-body {
         margin-top: 0px;
     }
