--- a/src/app/list-element/list-element.component.less
+++ b/src/app/list-element/list-element.component.less
@@ -9,14 +9,14 @@
     margin-bottom: 0;
     margin-top: 0;
     .list-view-pf-checkbox {
-        border-radius: 3px;
+        // border-radius: 3px;
         width: 11px;
-        border: 1px solid #9e9e9e;
+        // border: 1px solid #9e9e9e;
         height: 11px;
         margin-top: 34px;
         .check-dep {
             position: absolute;
-            top: 30px;
+            top: 24px;
             left: 15px;
             width: 15px;
         }
@@ -24,7 +24,7 @@
     .list-view-pf-expand {
         font-size: 18px;
         color: #545b64;
-        margin-top: 19px;
+        margin-top: 14px;
     }
     .list-view-pf-actions {
         margin-left: 0;
